syntax = "proto3";
package user;

option java_multiple_files = true;
option java_package = "com.devoops.user.grpc.proto";

service UserInternalService {
  rpc GetUserSummary(GetUserSummaryRequest) returns (GetUserSummaryResponse);
}

message GetUserSummaryRequest {
  string user_id = 1;
}

message GetUserSummaryResponse {
  bool found = 1;
  string user_id = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string role = 6;
  bool is_deleted = 7;
}
